--- a/index.html
+++ b/index.html
@@ -9,14 +9,28 @@
     <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
-  <body class="bg-slate-50 min-h-screen p-6">
+  <body class="bg-slate-50 min-h-screen p-4 md:p-6">
     <div id="root"></div>
+    <style>
+      input[type=number]::-webkit-inner-spin-button,
+      input[type=number]::-webkit-outer-spin-button { -webkit-appearance: none; margin: 0; }
+      input[type=number] { -moz-appearance: textfield; }
+    </style>
     <script type="text/babel" data-presets="react">
       const { useState, useMemo } = React;
 
-      const DRIVER = { perKmUA: 0.07, perKmEU: 0.12, monthlySalaryTaxes: 673, perDiemUA: 7.11, businessTripEU: 222 };
-      const DIRECT = { exploitationPerKm: 0.16, permitsEUPerKm: 0.24, permitsUAPerKm: 0.02, orgPerKm: 0.11, depreciationPerKm: 0.09, parkingPerTrip: 77.7 };
-      const INDIRECT_MONTHLY = { overhead: 550, admin: 280 };
+      const DRIVER = { perKmUA: 0.095238, perKmEU: 0.14218, monthlySalaryTaxes: 500, perDiemUA: 7.11, businessTripEU: 222 };
+      const DIRECT = {
+  permitsEUPerKm: 0.11,
+  permitsUAPerKm: 0,
+  exploitationPerKm: 0.10,
+  orgPerKm: 0.05,
+  depreciationPerKm: 0.1027,
+  generalPerKm: 0.07,
+  adminPerKm: 0.09,
+  parkingInternational: 75
+};
+      const INDIRECT_MONTHLY = { overhead: 0, admin: 0 };
       const FUEL = { emptyLper100: 28, loadedLper100: 34, reeferAutoLPerDay: 30, reeferNonstopLPerDay: 84, priceUA: 1.23, priceEU: 2.0 };
       const fmt = (n) => n.toLocaleString(undefined, { maximumFractionDigits: 2, minimumFractionDigits: 2 });
 
@@ -31,7 +45,6 @@
         const totalDays = daysUA + daysEU;
 
         const results = useMemo(() => {
-          // ==== FUEL ====
           const emptyKm = totalKm * ((+inputs.emptySharePct || 0) / 100);
           const loadedKm = Math.max(totalKm - emptyKm, 0);
           const litersDriving = (loadedKm * FUEL.loadedLper100 + emptyKm * FUEL.emptyLper100) / 100;
@@ -48,26 +61,31 @@
           const fuelCostEU = (litersEU + reeferLitersEU) * FUEL.priceEU;
           const fuelTotal = fuelCostUA + fuelCostEU;
 
-          // ==== DRIVER (breakdown) ====
           const isRC = inputs.tripType === 'РЦ';
           const motivation = isRC ? 24 * daysUA : (kmUA * DRIVER.perKmUA + kmEU * DRIVER.perKmEU);
           const perDiems = isRC ? 0 : (daysUA * DRIVER.perDiemUA + (isInternational && daysEU > 0 ? DRIVER.businessTripEU : 0));
           const salaryAlloc = (DRIVER.monthlySalaryTaxes / 30) * totalDays;
           const driverTotal = motivation + perDiems + salaryAlloc;
 
-          // ==== DIRECT (breakdown) ====
           const directExploit = totalKm * DIRECT.exploitationPerKm;
-          const directOrg = totalKm * DIRECT.orgPerKm + (+inputs.ferryCost || 0);
-          const directDepr = totalKm * DIRECT.depreciationPerKm;
-          const directPermitEU = kmEU * DIRECT.permitsEUPerKm;
-          const directPermitUA = kmUA * DIRECT.permitsUAPerKm;
-          const directParking = isInternational ? DIRECT.parkingPerTrip : 0;
-          const directTotal = directExploit + directOrg + directDepr + directPermitEU + directPermitUA + directParking;
+const directOrg = totalKm * DIRECT.orgPerKm;
+const directDepr = totalKm * DIRECT.depreciationPerKm;
+const directGeneral = totalKm * DIRECT.generalPerKm;
+const directAdmin = totalKm * DIRECT.adminPerKm;
 
-          // ==== INDIRECT ====
+// Дозвільні
+const directPermitEU = isInternational ? kmEU * DIRECT.permitsEUPerKm + (+inputs.ferryCost || 0) : 0;
+const directPermitUA = 0;
+
+// Стоянки міжнародні
+const directParking = isInternational ? DIRECT.parkingInternational : 0;
+
+const directOther = inputs.tripType === 'міжнародний' ? 0 : inputs.tripType === 'внутрішній' ? totalKm * 0.01 : 0;
+
+const directTotal = directExploit + directOrg + directDepr + directGeneral + directAdmin + directPermitEU + directOther + directParking;
+
           const indirectAlloc = ((INDIRECT_MONTHLY.overhead + INDIRECT_MONTHLY.admin) / 30) * totalDays;
 
-          // ==== REVENUE & PROFIT ====
           const revenue = (+inputs.freightUSD || 0) + (+inputs.otherBonuses || 0);
           const grossProfit = revenue - fuelTotal - driverTotal - directTotal;
           const netProfit = grossProfit - indirectAlloc;
@@ -77,7 +95,7 @@
             revenue, grossProfit, netProfit, profitPerKm,
             fuelTotal, fuelCostUA, fuelCostEU,
             driverTotal, motivation, perDiems, salaryAlloc,
-            directTotal, directExploit, directOrg, directDepr, directPermitEU, directPermitUA, directParking,
+            directTotal, directExploit, directOrg, directDepr, directGeneral, directAdmin, directPermitEU, directOther, directParking,
             totalKm, totalDays
           };
         }, [inputs, totalKm, totalDays, kmUA, kmEU, daysUA, daysEU, isInternational]);
@@ -101,7 +119,7 @@
         };
 
         return (
-          <div className="max-w-6xl mx-auto">
+          <div className="max-w-6xl mx-auto pb-24 md:pb-0">
             <h1 className="text-3xl font-bold mb-4">Логістичний калькулятор — 20т (тент/реф)</h1>
             <div className="grid md:grid-cols-3 gap-4">
               <div className="space-y-3">
@@ -134,29 +152,31 @@
                 </Card>
 
                 <Card title="Мотивація водія — детально">
-                  <DetailRow label={"Мотивація (км або 24$×дні UA)"} value={results.motivation} />
-                  <DetailRow label={"Добові та відрядження"} value={results.perDiems} />
-                  <DetailRow label={"Зарплата+податки (алокація)"} value={results.salaryAlloc} />
+                  <DetailRow label="Мотивація (км або 24$×дні UA)" value={results.motivation} />
+                  <DetailRow label="Добові та відрядження" value={results.perDiems} />
+                  <DetailRow label="Зарплата+податки (алокація)" value={results.salaryAlloc} />
                   <div className="mt-2 pt-2 border-t flex justify-between font-semibold">
                     <span>Разом мотивація</span><span>${fmt(results.driverTotal)}</span>
                   </div>
                 </Card>
 
                 <Card title="Прямі витрати — детально">
-                  <DetailRow label={"Експлуатація (перевезення)/км"} value={results.directExploit} />
-                  <DetailRow label={"Організаційні/км (вкл. паром)"} value={results.directOrg} />
-                  <DetailRow label={"Амортизація/км"} value={results.directDepr} />
-                  <DetailRow label={"Дозволи ЄС"} value={results.directPermitEU} />
-                  <DetailRow label={"Дозволи Україна"} value={results.directPermitUA} />
-                  <DetailRow label={"Стоянки/рейс (тільки для міжнародних)"} value={results.directParking} />
-                  <div className="mt-2 pt-2 border-t flex justify-between font-semibold">
-                    <span>Разом прямі витрати</span><span>${fmt(results.directTotal)}</span>
-                  </div>
-                </Card>
+  <DetailRow label="Дозвільні (UTA)" value={results.directPermitEU} />
+  <DetailRow label="Стоянки міжнародні" value={results.directParking} />
+  <DetailRow label="Прямі інші витрати" value={results.directOther} />
+  <DetailRow label="Організаційні витрати" value={results.directOrg} />
+  <DetailRow label="Експлуатаційні витрати" value={results.directExploit} />
+  <DetailRow label="Амортизація" value={results.directDepr} />
+  <DetailRow label="Загальновиробничі" value={results.directGeneral} />
+  <DetailRow label="Адміністративні" value={results.directAdmin} />
+  <div className="mt-2 pt-2 border-t flex justify-between font-semibold">
+    <span>Разом прямі витрати</span><span>${fmt(results.directTotal)}</span>
+  </div>
+</Card>
 
                 <Card title="Паливо — довідка">
-                  <DetailRow label={"Пальне в Україні"} value={results.fuelCostUA} />
-                  <DetailRow label={"Пальне в ЄС"} value={results.fuelCostEU} />
+                  <DetailRow label="Пальне в Україні" value={results.fuelCostUA} />
+                  <DetailRow label="Пальне в ЄС" value={results.fuelCostEU} />
                   <div className="mt-2 pt-2 border-t flex justify-between font-semibold">
                     <span>Разом паливо</span><span>${fmt(results.fuelTotal)}</span>
                   </div>
@@ -167,27 +187,63 @@
                 </Card>
               </div>
             </div>
+
+            <div className="md:hidden fixed bottom-0 left-0 right-0 bg-white/95 backdrop-blur border-t p-3">
+              <div className="flex items-center justify-between">
+                <div className="text-sm text-slate-600">Чистий прибуток</div>
+                <div className={`text-lg font-semibold ${results.netProfit >= 0 ? 'text-emerald-600' : 'text-rose-600'}`}>${fmt(results.netProfit)}</div>
+              </div>
+              <div className="text-xs text-slate-500">Прибуток/км: <b className={`${results.profitPerKm >= 0 ? 'text-emerald-600' : 'text-rose-600'}`}>${fmt(results.profitPerKm)}</b></div>
+            </div>
           </div>
         );
       }
 
-      function Card({ title, children }) {return (<div className="bg-white rounded-2xl shadow p-4 border"><h2 className="text-lg font-semibold mb-2">{title}</h2>{children}</div>);}      
-      function Select({ label, value, onChange, options }) {return (<div><label className="text-sm text-gray-600">{label}</label><select className="border rounded-xl px-2 py-1 w-full" value={value} onChange={onChange}>{options.map(o=><option key={o} value={o}>{o}</option>)}</select></div>);}      
-      function Input({ label, value, onChange, disabled }) {
+      function Card({ title, children }) {
+        return (
+          <div className="bg-white rounded-2xl shadow p-4 border">
+            <h2 className="text-lg font-semibold mb-2">{title}</h2>
+            {children}
+          </div>
+        );
+      }
+
+      function Select({ label, value, onChange, options }) {
         return (
           <div>
             <label className="text-sm text-gray-600">{label}</label>
+            <select className="border rounded-xl px-2 py-1 w-full" value={value} onChange={onChange}>
+              {options.map((o) => (
+                <option key={o} value={o}>
+                  {o}
+                </option>
+              ))}
+            </select>
+          </div>
+        );
+      }
+
+      function Input({ label, value, onChange, disabled }) {
+        return (
+          <div className="space-y-1">
+            <label className="text-sm text-gray-600">{label}</label>
             <input
               type="number"
+              inputMode="decimal"
+              enterKeyHint="done"
               disabled={disabled}
               value={value}
               onChange={onChange}
-              onFocus={(e) => { if (e.target.value === '0' || e.target.value === '') e.target.value = ''; onChange(e); }}
-              className="border rounded-xl px-2 py-1 w-full"
+              onFocus={(e) => {
+                if (e.target.value === '0' || e.target.value === '') e.target.value = '';
+                onChange(e);
+              }}
+              className="border rounded-xl px-3 py-3 w-full text-base"
             />
           </div>
         );
       }
+
       function DetailRow({ label, value }) {
         return (
           <div className="flex justify-between py-1 text-sm">
@@ -201,6 +257,3 @@
     </script>
   </body>
 </html>
-
-
-
